--- a/custom_components/ac_infinity/manifest.json
+++ b/custom_components/ac_infinity/manifest.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.0",
+  "version": "1.2.0",
   "domain": "ac_infinity",
   "name": "AC Infinity",
   "bluetooth": [
@@ -15,10 +15,10 @@
   "dependencies": [
     "bluetooth_adapters"
   ],
-  "documentation": "https://github.com/hunterjm/ac-infinity-hacs",
-  "issue_tracker": "https://github.com/hunterjm/ac-infinity-hacs/issues",
+  "documentation": "https://github.com/SethCalkins/ac-infinity-hacs",
+  "issue_tracker": "https://github.com/SethCalkins/ac-infinity-hacs/issues",
   "iot_class": "local_push",
   "requirements": [
-    "ac-infinity-ble==0.5.0"
+    "ac-infinity-ble @ git+https://github.com/SethCalkins/ac-infinity-ble.git@main"
   ]
 }
